<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.henrikbn.eksamensprojekt.NyKoerselFragment">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/koersel_titel"
                android:id="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_adresse_fra"
                    android:id="@+id/textView6"
                    android:layout_margin="5dp"/>

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/adresse_fra"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_adresse_til"
                    android:id="@+id/textView7"
                    android:layout_margin="5dp"/>

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/adresse_til"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_dato_fra"
                    android:id="@+id/textView8"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="35dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="yyyy-MM-dd"
                            android:id="@+id/textView94"
                            android:layout_margin="5dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="hh:mm.sss"
                            android:id="@+id/textView19"
                            android:layout_margin="5dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/fra_dato"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            android:textSize="12sp"/>

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/fra_tid"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:layout_marginLeft="2dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_dato_til"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="35dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="yyyy-MM-dd"
                            android:id="@+id/textView9"
                            android:layout_margin="5dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textView10"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="hh:mm.sss"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/til_dato"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            android:textSize="12sp"/>

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/til_tid"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:layout_marginLeft="2dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_reg_nr"
                    android:id="@+id/textView15"
                    android:layout_margin="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_nr"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_km_fra"
                    android:id="@+id/textView11"
                    android:layout_margin="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/km_fra"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_km_til"
                    android:id="@+id/textView13"
                    android:focusableInTouchMode="true"
                    android:layout_margin="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/km_til"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/koersel_formaal"
                    android:id="@+id/textView14"
                    android:layout_margin="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:id="@+id/formaal"
                    android:autoText="false"
                    android:inputType="textAutoComplete|textMultiLine"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"/>
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/koersel_opret_button"
                android:id="@+id/opret_koersel"
                android:layout_margin="20dp"
                />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
